--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <main>
     <!-- Profile Pic - About -->
     <img src="assets/profile-pic.webp" alt="Profile Picture" class="profilePic">
-    <section id="about" class="section">    <!-- the About section-->
+    <section id="about" class="section fade-in">    <!-- the About section-->
         <h2>About Me</h2>
         <p>I am a Computer Science student with a passion for coding, problem-solving,
             and building small projects to improve my skills. I enjoy exploring web development,
@@ -37,65 +37,65 @@
     </section>
 
     <!-- the Projects section -->
-    <section id="projects" class="section">
+    <section id="projects" class="section fade-in">
         <h2>Projects</h2>
         <div class="filter-buttons">
-            <button onclick="filterProjects('all')">All</button>
-            <button onclick="filterProjects('web')">Web</button>
-            <button onclick="filterProjects('cpu')">CPU / Hardware</button>
+            <button class="active" data-filter="all">All</button>
+            <button data-filter="web">Web</button>
+            <button data-filter="cpu">CPU / Hardware</button>
         </div>
         <div class="project-grid">
         <!-- Project 1 -->
-        <div class="projectDesc" data-category="web" data-project-id="event">
-            <img src="assets/event.png" alt="Event Management System screenshot">
-            <h3>Event Management System Platform</h3>
-            <p class="shortDesc">
-                The Event Management System is a web and mobile platform designed to help students,
-                faculty, and organizers manage university events easily.
-            </p>
-            <p class="longDesc hidden">
-                Users can browse upcoming events, register, and receive notifications. Organizers can create events, track attendance,
-                and manage registrations. The system supports secure payments for paid events and provides QR code tickets for
-                quick check-ins. Users can also rate events and contact organizers for inquiries. It includes
-                search and filter options, email notifications, and image uploads for event promotion.
-            </p>
-            <button onclick="toggleDescription(this)">Read More</button>
-        </div>
+            <div class="projectDesc" data-category="web" data-project-id="event">
+                <img src="assets/event.png" alt="Event Management System screenshot">
+                <h3>Event Management System Platform</h3>
+                <p class="shortDesc">
+                    The Event Management System is a web and mobile platform designed to help students,
+                    faculty, and organizers manage university events easily.
+                </p>
+                <p class="longDesc hidden">
+                    Users can browse upcoming events, register, and receive notifications. Organizers can create events, track attendance,
+                    and manage registrations. The system supports secure payments for paid events and provides QR code tickets for
+                    quick check-ins. Users can also rate events and contact organizers for inquiries. It includes
+                    search and filter options, email notifications, and image uploads for event promotion.
+                </p>
+                <button onclick="toggleDescription(this)">Read More</button>
+            </div>
 
-        <!-- Project 2 -->
-        <div class="projectDesc" data-category="web" data-project-id="hikaya">
-            <img src="assets/HTML.jpg" alt="Hikaya app screenshot">
-            <h3>Hikaya</h3>
-            <p class="shortDesc">
-                Hikaya is a web application that uses OpenAI’s API to generate personalized stories for children based on their preferences.
-            </p>
-            <p class="longDesc hidden">
-                The website allows parents to customize elements such as the child’s name, age, favorite themes, and the moral of the story.
-                Parents can also choose cultural elements or favorite characters to make the stories feel unique.
-                The AI then creates age-appropriate, engaging, and educational stories that make stories more fun and personal.
-            </p>
-            <button onclick="toggleDescription(this)">Read More</button>
-        </div>
+            <!-- Project 2 -->
+            <div class="projectDesc" data-category="web" data-project-id="hikaya">
+                <img src="assets/HTML.jpg" alt="Hikaya app screenshot">
+                <h3>Hikaya</h3>
+                <p class="shortDesc">
+                    Hikaya is a web application that uses OpenAI’s API to generate personalized stories for children based on their preferences.
+                </p>
+                <p class="longDesc hidden">
+                    The website allows parents to customize elements such as the child’s name, age, favorite themes, and the moral of the story.
+                    Parents can also choose cultural elements or favorite characters to make the stories feel unique.
+                    The AI then creates age-appropriate, engaging, and educational stories that make stories more fun and personal.
+                </p>
+                <button onclick="toggleDescription(this)">Read More</button>
+            </div>
 
-        <!-- Project 3: CPU -->
-        <div class="projectDesc" data-category="cpu" data-project-id="cpu">
-            <img src="assets/cpu.png" alt="16-bit pipelined CPU diagram">
-            <h3>16-bit Pipelined CPU</h3>
-            <p class="shortDesc">
-                Designed and implemented a 16-bit pipelined processor with custom RISC instructions for COE301.
-            </p>
-            <p class="longDesc hidden">
-                This project involved building a single-cycle 16-bit CPU with a 5-stage pipeline, including instruction fetch,
-                decode, execute, memory, and write-back stages. The CPU supports arithmetic, logical, branching, and memory instructions.
-                I tested hazard detection, forwarding, and pipelined control logic. The project demonstrates knowledge of
-                CPU architecture, instruction sets, and performance optimization techniques.
-            </p>
-            <button onclick="toggleDescription(this)">Read More</button>
-        </div>
+            <!-- Project 3: CPU -->
+            <div class="projectDesc" data-category="cpu" data-project-id="cpu">
+                <img src="assets/cpu.png" alt="16-bit pipelined CPU diagram">
+                <h3>16-bit Pipelined CPU</h3>
+                <p class="shortDesc">
+                    Designed and implemented a 16-bit pipelined processor with custom RISC instructions for COE301.
+                </p>
+                <p class="longDesc hidden">
+                    This project involved building a single-cycle 16-bit CPU with a 5-stage pipeline, including instruction fetch,
+                    decode, execute, memory, and write-back stages. The CPU supports arithmetic, logical, branching, and memory instructions.
+                    I tested hazard detection, forwarding, and pipelined control logic. The project demonstrates knowledge of
+                    CPU architecture, instruction sets, and performance optimization techniques.
+                </p>
+                <button onclick="toggleDescription(this)">Read More</button>
+            </div>
         </div>
 
     </section>
-    <section id="github" class="section">
+    <section id="github" class="section fade-in">
         <h2>My GitHub Projects</h2>
         <p id="githubStatus">Loading repositories...</p>
         <div id="githubRepos" class="github-grid"></div>
@@ -103,7 +103,7 @@
 
 
     <!-- Skills -->
-    <section id="skills" class="section">  <!-- an unordered list for some skills I have-->
+    <section id="skills" class="section fade-in">  <!-- an unordered list for some skills I have-->
 
         <h2>Skills</h2>
         <ul class="skillsList">
@@ -119,7 +119,7 @@
 
 
     <!-- Contact -->
-    <section id="contact" class="section">
+    <section id="contact" class="section fade-in">
         <h2>Contact</h2>
         <!-- when the form is submitted a message will be shown to the user-->
         <form id="contactForm" onsubmit="submitForm(event)">
