added the hikaya logo

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
             <!-- Project 2 -->
             <div class="projectDesc" data-category="web" data-project-id="hikaya">
-                <img src="assets/HTML.jpg" alt="Hikaya app screenshot">
+                <img src="assets/HTML.png" alt="Hikaya app screenshot">
                 <h3>Hikaya</h3>
                 <p class="shortDesc">
                     Hikaya is a web application that uses OpenAI’s API to generate personalized stories for children based on their preferences.
