--- a/index.html
+++ b/index.html
@@ -40,11 +40,20 @@
     <!-- the Projects section -->
     <section id="projects" class="section fade-in">
         <h2>Projects</h2>
-        <div class="filter-buttons">
-            <button class="active" data-filter="all">All</button>
-            <button data-filter="web">Web</button>
-            <button data-filter="cpu">CPU / Hardware</button>
-            <button data-filter="AI">AI / ML </button>
+        <div class="projects-controls">
+            <div class="filter-buttons">
+                <button class="active" data-filter="all">All</button>
+                <button data-filter="web">Web</button>
+                <button data-filter="cpu">CPU / Hardware</button>
+                <button data-filter="AI">AI / ML</button>
+            </div>
+
+            <div class="sort-dropdown">
+                <select id="sortSelect" onchange="sortProjects(this.value)">
+                    <option value="az">Sort: A → Z</option>
+                    <option value="za">Sort: Z → A</option>
+                </select>
+            </div>
         </div>
         <div class="project-grid">
         <!-- Project 1 -->
@@ -110,10 +119,11 @@
                 <button onclick="toggleDescription(this)">Read More</button>
             </div>
         </div>
-
     </section>
+
+    <!-- gitHub integration -->
     <section id="github" class="section fade-in">
-        <h2>My GitHub Projects</h2>
+        <h2>GitHub Repositories</h2>
         <p id="githubStatus">Loading repositories...</p>
         <div id="githubRepos" class="github-grid"></div>
     </section>
@@ -149,7 +159,7 @@
     </section>
 </main>
 
-<footer class="footer">       <!-- adding a footer that contains my name and the year -->
+<footer class="footer">
     <p>© <span id="year"></span> Meznah Alshubaian</p>
 </footer>
 </body>
